# monte-carlo-option-pricing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: bench_lsm.py  bench_lsm_cpp_vs_py.py
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  lsm.cpp  lsm.hpp
docs/: ROADMAP.md
notebooks/: american_lsm_demo.ipynb  main.ipynb
src/mcop/: __init__.py  american_lsm.py  american_lsm_cpp.py  analysis.py  binomial_tree.py  cli.py  config.py  payoffs.py  pricing.py  simulate_paths.py  variance_reduction.py
tests/: test_american_call_equals_euro_call.py  test_american_put_vs_binomial.py  test_black_scholes_mc.py  test_control_variate.py  test_lsm_cpp_matches_python.py  test_payoffs.py
