[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcop"
version = "0.1.0"
description = "Monte Carlo option pricing (European + American via LSM)"
authors = [{name="Patrick Ridge"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcop = "mcop.cli:main"